--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,6 @@
     "font-awesome": "fontawesome#^4.6.3",
     "bootstrap": "^3.3.6",
     "jquery": "^3.0.0",
-    "requirejs": "^2.2.0"
+    "angular-route": "^1.5.7"
   }
 }
