--- a/package.json
+++ b/package.json
@@ -18,7 +18,17 @@
   "homepage": "https://github.com/Mahesh434/learn#readme",
   "devDependencies": {
     "bower": "^1.7.9",
+    "browser-sync": "^2.13.0",
+    "del": "^2.2.1",
+    "grunt": "^1.0.1",
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.2"
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-compass": "^2.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^1.5.4",
+    "gulp-watch": "^4.3.8"
   }
 }
